[gd_scene load_steps=15 format=3 uid="uid://c62pya7s60qyv"]

[ext_resource type="Texture2D" uid="uid://c5yv3a00qa2m6" path="res://all art/kenney_tiny-dungeon/Tiles/tile_0124.png" id="1_0vxxa"]
[ext_resource type="Script" path="res://rat_boss.gd" id="1_1oabs"]
[ext_resource type="Texture2D" uid="uid://bfvvq1krkdden" path="res://all art/explosion animations - emily/explosion1.png" id="2_22poh"]
[ext_resource type="Texture2D" uid="uid://dul0dfr4hjpcw" path="res://all art/explosion animations - emily/explosion2.png" id="3_4bjoj"]
[ext_resource type="AudioStream" uid="uid://cp7mqp8c7eci6" path="res://all art/sounds effects/enemyHurt.wav" id="3_ibf7y"]
[ext_resource type="AudioStream" uid="uid://c6e34ffta2ayn" path="res://all art/sounds effects/enemyDeath.wav" id="4_rb55g"]
[ext_resource type="Texture2D" uid="uid://dgkwj8bns7851" path="res://all art/explosion animations - emily/explosion3.png" id="4_w4pba"]
[ext_resource type="Texture2D" uid="uid://cg704e3q3xwrd" path="res://all art/explosion animations - emily/explosion4.png" id="5_r3xee"]
[ext_resource type="Texture2D" uid="uid://benndmddp3t2f" path="res://all art/explosion animations - emily/explosion5.png" id="6_2mdpx"]
[ext_resource type="Texture2D" uid="uid://wbcsvy88yw70" path="res://all art/explosion animations - emily/explosion6.png" id="7_um0fr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ydnv0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_22poh")
}, {
"duration": 1.0,
"texture": ExtResource("3_4bjoj")
}, {
"duration": 1.0,
"texture": ExtResource("4_w4pba")
}, {
"duration": 1.0,
"texture": ExtResource("5_r3xee")
}, {
"duration": 1.0,
"texture": ExtResource("6_2mdpx")
}, {
"duration": 1.0,
"texture": ExtResource("7_um0fr")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_0vxxa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_v30jk"]
radius = 94.0053

[sub_resource type="CircleShape2D" id="CircleShape2D_8ni3g"]
radius = 485.001

[sub_resource type="CircleShape2D" id="CircleShape2D_aov5q"]
radius = 94.0479

[node name="RatBoss" type="CharacterBody2D"]
script = ExtResource("1_1oabs")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(10.6875, 10.6875)
sprite_frames = SubResource("SpriteFrames_ydnv0")

[node name="hurt_area" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_area"]
shape = SubResource("CircleShape2D_v30jk")

[node name="spawnRats" type="Timer" parent="."]
wait_time = 5.0

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_8ni3g")

[node name="EnemyHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ibf7y")

[node name="EnemyDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rb55g")
volume_db = -10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_aov5q")

[connection signal="area_entered" from="hurt_area" to="." method="_on_hurt_area_entered"]
[connection signal="timeout" from="spawnRats" to="." method="_on_spawn_rats_timeout"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
